# gh-release-install

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  RELEASE.md  examples.sh  pyproject.toml  renovate.json
.chglog/: config.yml
.github/: dependabot.yml  matcher-python.json  release-drafter.yml  release-please-config.json
.github/workflows/: ci.yml  release-drafter.yml  release-please.yml  release.yml
.github/workflows/actions/python/: action.yml
e2e/: install_test.py
gh_release_install/: __init__.py  checksum.py  cli.py  main.py  unpack.py  utils.py
gh_release_installer/: __init__.py  cli.py  main.py
scripts/: release.sh
tests/: checksum_test.py  conftest.py  main_test.py  unpack_test.py  utils_test.py
tests/fixtures/: gh_releases_latest.json
