[project]
name = "gh_release_install"
version = "0.11.2"
description = "CLI helper to install Github releases on your system."
readme = "README.md"
authors = [{ name = "Joola", email = "jooola@users.noreply.github.com" }]
license = "GPL-3.0-only"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Installation/Setup",
  "Topic :: System :: Software Distribution",
]

requires-python = ">=3.8"
dependencies = [
  "requests>=2.32.3,<2.33",
]

[project.optional-dependencies]
dev = [
  "black>=24.0,<25.0",
  "isort>=5.9.3,<6.0",
  "mypy>=1.0.0,<2.0",
  "pylint>=3.0.0,<4.0",
  "pytest>=8.0.0,<9.0",
  "pytest-cov>=5.0.0,<6.0",
  "pytest-xdist>=3.0.0,<4.0",
  "requests-mock>=1.9.3,<2.0",
  "types-requests>=2.31.0,<3.0",
]

[project.scripts]
gh-release-install = "gh_release_install.cli:run"

[tool.setuptools]
packages = ["gh_release_install"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.messages_control]
disable = [
  "missing-module-docstring",
  "missing-function-docstring",
  "missing-class-docstring",
]

[tool.isort]
profile = "black"
combine_as_imports = true
add_imports = ["from __future__ import annotations"]
